@@ -268,11 +268,11 @@
 ;; (def-c-type PGconn c-pointer) (parse-c-type 'pgconn)
 (define-compiler-macro parse-c-type (&whole form typespec &optional name)
   (when (and (not name)
-	     (typep typespec '(CONS (EQL QUOTE) (CONS SYMBOL NULL))))
+             (typep typespec '(CONS (EQL QUOTE) (CONS SYMBOL NULL))))
     (let* ((typespec (second typespec))
-	   (internal (gethash typespec *c-type-table* 0)))
+           (internal (gethash typespec *c-type-table* 0)))
       (when (symbolp internal)
-	(return-from parse-c-type `',internal))))
+        (return-from parse-c-type `',internal))))
   form)
 
 (defun parse-options (options keywords whole)
@@ -813,11 +813,32 @@
 
 ;; c-type is evaluated. This is particularly useful for variable sized arrays
 ;; using: `(c-array uint8 ,(length foo))
+(flet ((optimize-type (c-type)
+         ;; Under Kaz Kylheku's backquote reader, `(c-array x ,l) yields
+         ;;(SYSTEM::BACKQUOTE (C-ARRAY X (SYSTEM::UNQUOTE L)))
+         ;; which is optimized because it is costly, yet a common pattern.
+         (if (typep c-type
+                    '(CONS (EQL SYS::BACKQUOTE)
+                      (CONS
+                       (CONS (MEMBER C-ARRAY C-ARRAY-MAX)
+                        (CONS * (CONS (CONS (EQL SYS::UNQUOTE)
+                                            (CONS * NULL)) NULL))) NULL)))
+             (let ((c-type (cadr c-type)))
+               `(vector
+                 ',(first c-type)
+                 (parse-c-type ',(second c-type))
+                 (ext:ethe unsigned-byte ,(second (third c-type)))))
+             `(parse-c-type ,c-type))))
+  ;; Additionaly, `(c-array uint8 ,(length foo)) transforms to
+  ;; (vector 'c-array (parse-c-type 'uint8) (length foo)) which compiles
+  ;; to (vector 'c-array 'uint8 (length foo)) thanks to compiler-macros.
+  ;; As a result, execution time is nearly halved.
+
 (defmacro with-foreign-object ((var c-type &optional (init nil init-p))
                                &body body)
   `(EXEC-ON-STACK
     (LAMBDA (,var) ,@body)
-    (PARSE-C-TYPE ,c-type)
+    ,(optimize-type c-type)
     . ,(if init-p (list init))))
 
 ;; symbol-macro based interface (like DEF-C-VAR)
@@ -826,8 +847,9 @@
   (let ((fv (gensym (symbol-name var))))
     `(EXEC-ON-STACK
       (LAMBDA (,fv) (SYMBOL-MACROLET ((,var (FOREIGN-VALUE ,fv))) ,@body))
-      (PARSE-C-TYPE ,c-type)
+      ,(optimize-type c-type)
       . ,(if init-p (list init)))))
+);flet
 
 (defun exec-with-foreign-string (thunk string
                                  &key (encoding #+UNICODE custom:*foreign-encoding*
